# apt_project

./: CMakeLists.txt  Dockerfile  sql_schema.sql
doc/: endpoints.md  models.md
include/: usual.h
include/controler/: whr.cpp
include/controler/Game/: GameControler.h
include/controler/Player/: PlayerControler.h
include/controler/WHR/: proba_win.cpp  proba_win.h
include/ignored/: infos.h  passwd.h
include/model/: ExecuteResult.h  MySQLLink.h
include/model/Game/: Game.h  db_game.h
include/model/GameInformation/: GameInformation.h  db_gameinformation.h
include/model/Player/: Player.h  db_player.h
include/model/PlayerInformation/: PlayerInformation.h  db_playerinformation.h
include/view/: Generic.h  HelloHandler.h  Request.h  ServiceManager.h
include/view/Service/: AbstractService.h  ServicesManager.h
include/view/User/: UserService.h  UserService.hpp
src/: main.cpp  main2.cpp  server.h
src/controler/: PlayerControler.cpp
src/controler/Game/: GameControler.cpp
src/controler/Player/: PlayerControler.cpp  PlayerControler.h
src/controler/WHR/: proba_win.cpp
src/model/: ExecuteResult.cpp  MySQLLink.cpp
src/model/Game/: Game.cpp  db_game.cpp
src/model/GameInformation/: GameInformation.cpp  db_gameinformation.cpp
src/model/Player/: db_player.cpp
src/model/PlayerInformation/: PlayerInformation.cpp  db_gameinformation.cpp
src/model/User/: User.cpp  UserDB.cpp
src/view/: HelloHandler.cpp  Request.cpp  ServiceManager.cpp  ServicesManager.cpp  UserService.cpp  VersionService.cpp
src/view/Service/: AbstractService.cpp  ServiceException.cpp  ServicesManager.cpp  VersionService.cpp
src/view/User/: UserService.cpp
test/: CMakeLists.txt  gtest.cpp  run.py
